--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1792,7 +1792,7 @@
 	hr {
 		border: 0;
 		border-bottom: solid 2px;
-		margin: 3rem 0;
+		margin: 0 0;
 	}
 
 		hr.major {
@@ -3028,7 +3028,7 @@
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
+			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/EmeraldFoundationBackground.png");
 			background-size: auto,								auto,														100% auto;
 			background-position: center,								center,														top center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
@@ -3081,7 +3081,7 @@
 /* Intro */
 
 	#intro {
-		color: #ffffff;
+		color: #f3fff2;
 		padding: 8rem 4rem 6rem 4rem ;
 		-moz-align-items: center;
 		-webkit-align-items: center;
@@ -3111,7 +3111,7 @@
 	}
 
 		#intro input, #intro select, #intro textarea {
-			color: #ffffff;
+			color: #f3fff2;
 		}
 
 		#intro a {
