--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1715,7 +1715,7 @@
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 			border-bottom: 0;
-			color: inherit;
+			color: #009975;
 			text-decoration: none;
 		}
 
@@ -1822,7 +1822,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #18bfef !important;
+			color: #00bf92 !important;
 		}
 
 	strong, b {
@@ -1830,7 +1830,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #212931;
+		color: #009975;
 	}
 
 	blockquote {
