--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2030,8 +2030,8 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #18bfef;
-			color: #18bfef !important;
+			box-shadow: inset 0 0 0 2px #00bf92;
+			color: #00bf92 !important;
 		}
 
 		input[type="submit"].special,
@@ -2049,7 +2049,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #18bfef;
+				background-color: #00bf92;
 			}
 
 /* Form */
@@ -2335,7 +2335,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #18bfef;
+			border-color: #00bf92;
 		}
 
 	select option {
@@ -2366,7 +2366,7 @@
 
 	input[type="checkbox"]:focus + label:before,
 	input[type="radio"]:focus + label:before {
-		border-color: #18bfef;
+		border-color: #00bf92;
 	}
 
 	::-webkit-input-placeholder {
@@ -2693,7 +2693,7 @@
 	}
 
 	ul.icons li a.icon:hover:before {
-		color: #18bfef;
+		color: #00bf92;
 	}
 
 	ul.icons.alt li .icon:before {
@@ -2701,7 +2701,7 @@
 	}
 
 	ul.icons.alt li a.icon:hover:before {
-		box-shadow: inset 0 0 0 2px #18bfef;
+		box-shadow: inset 0 0 0 2px #00bf92;
 	}
 
 /* Section/Article */
@@ -2992,13 +2992,13 @@
 	}
 
 		.pagination a:hover {
-			color: #18bfef !important;
-			border-color: #18bfef;
+			color: #00bf92 !important;
+			border-color: #00bf92;
 			z-index: 1;
 		}
 
 			.pagination a:hover + a, .pagination a:hover + span {
-				border-left-color: #18bfef;
+				border-left-color: #00bf92;
 			}
 
 		.pagination a.active {
@@ -3121,7 +3121,7 @@
 
 			#intro a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #00bf92 !important;
 			}
 
 		#intro strong, #intro b {
@@ -3160,8 +3160,8 @@
 			#intro input[type="button"]:hover,
 			#intro button:hover,
 			#intro .button:hover {
-				box-shadow: inset 0 0 0 2px #18bfef;
-				color: #18bfef !important;
+				box-shadow: inset 0 0 0 2px #00bf92;
+				color: #00bf92 !important;
 			}
 
 			#intro input[type="submit"].special,
@@ -3179,7 +3179,7 @@
 				#intro input[type="button"].special:hover,
 				#intro button.special:hover,
 				#intro .button.special:hover {
-					background-color: #18bfef;
+					background-color: #00bf92;
 				}
 
 		#intro h1 {
@@ -3336,7 +3336,7 @@
 
 			#header a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #00bf92 !important;
 			}
 
 		#header strong, #header b {
@@ -3383,8 +3383,8 @@
 		}
 
 			#header .logo:hover {
-				border-color: #18bfef !important;
-				color: #18bfef !important;
+				border-color: #00bf92 !important;
+				color: #00bf92 !important;
 			}
 
 		@media screen and (max-width: 980px) {
@@ -3438,7 +3438,7 @@
 		}
 
 		#nav ul.icons li a.icon:hover:before {
-			color: #18bfef;
+			color: #00bf92;
 		}
 
 		#nav ul.icons.alt li .icon:before {
@@ -3446,7 +3446,7 @@
 		}
 
 		#nav ul.icons.alt li a.icon:hover:before {
-			box-shadow: inset 0 0 0 2px #18bfef;
+			box-shadow: inset 0 0 0 2px #00bf92;
 		}
 
 		#nav input, #nav select, #nav textarea {
@@ -3460,7 +3460,7 @@
 
 			#nav a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #00bf92 !important;
 			}
 
 		#nav strong, #nav b {
@@ -3536,7 +3536,7 @@
 					}
 
 						#nav ul.links li.active a:hover {
-							color: #18bfef !important;
+							color: #00bf92 !important;
 						}
 
 		#nav ul.icons {
@@ -3780,7 +3780,7 @@
 
 			#footer a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #00bf92 !important;
 			}
 
 		#footer strong, #footer b {
@@ -3823,8 +3823,8 @@
 			#footer input[type="button"]:hover,
 			#footer button:hover,
 			#footer .button:hover {
-				box-shadow: inset 0 0 0 2px #18bfef;
-				color: #18bfef !important;
+				box-shadow: inset 0 0 0 2px #00bf92;
+				color: #00bf92 !important;
 			}
 
 			#footer input[type="submit"].special,
@@ -3842,7 +3842,7 @@
 				#footer input[type="button"].special:hover,
 				#footer button.special:hover,
 				#footer .button.special:hover {
-					background-color: #18bfef;
+					background-color: #00bf92;
 				}
 
 		#footer label {
@@ -3862,7 +3862,7 @@
 			#footer input[type="email"]:focus,
 			#footer select:focus,
 			#footer textarea:focus {
-				border-color: #18bfef;
+				border-color: #00bf92;
 			}
 
 		#footer select option {
@@ -3893,7 +3893,7 @@
 
 		#footer input[type="checkbox"]:focus + label:before,
 		#footer input[type="radio"]:focus + label:before {
-			border-color: #18bfef;
+			border-color: #00bf92;
 		}
 
 		#footer ::-webkit-input-placeholder {
@@ -3921,7 +3921,7 @@
 		}
 
 		#footer ul.icons li a.icon:hover:before {
-			color: #18bfef;
+			color: #00bf92;
 		}
 
 		#footer ul.icons.alt li .icon:before {
@@ -3929,7 +3929,7 @@
 		}
 
 		#footer ul.icons.alt li a.icon:hover:before {
-			box-shadow: inset 0 0 0 2px #18bfef;
+			box-shadow: inset 0 0 0 2px #00bf92;
 		}
 
 		#footer header.major .date:before, #footer header.major .date:after {
@@ -3969,13 +3969,13 @@
 		}
 
 			#footer .pagination a:hover {
-				color: #18bfef !important;
-				border-color: #18bfef;
+				color: #00bf92 !important;
+				border-color: #00bf92;
 				z-index: 1;
 			}
 
 				#footer .pagination a:hover + a, #footer .pagination a:hover + span {
-					border-left-color: #18bfef;
+					border-left-color: #00bf92;
 				}
 
 			#footer .pagination a.active {
@@ -4212,7 +4212,7 @@
 
 			#copyright a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #00bf92 !important;
 			}
 
 		#copyright strong, #copyright b {
