--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3055,7 +3055,7 @@
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background: #1e252d;
+			background: #002d22;
 			content: '';
 			display: block;
 			height: 100%;
